Reorganise into keras and tensorflow folders.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 .DS_Store
 __pycache__/
-Flickr8k_Data_Set/
-Flickr8k_image_data/
-Flickr8k_text_data/
-Flickr10_image_data/
-Flickr10_text_data/
-model_checkpoints/
-unseen_images/
-static/uploaded_images/
-caption_this_tensorflow/data/
+keras/Flickr8k_Data_Set/
+keras/Flickr8k_image_data/
+keras/Flickr8k_text_data/
+keras/Flickr10_image_data/
+keras/Flickr10_text_data/
+keras/model_checkpoints/
+keras/static/uploaded_images/
+keras/unseen_images/
+tensorflow/caption_this_tensorflow/data/
+tensorflow/caption_this_tensorflow/models/
 *.txt
 *.pkl
 *.png
